Imlement new penalty logic on the endpoint. Some fixes were made too.